<resources>
    <string name="app_name">Cyanogen Update Tracker</string>
    <string name="launcher_app_name">Update\r\nTracker</string>
    <string name="update_information_header">Update information</string>
    <string name="update_information_header_short">Update info</string>
    <string name="update_information_latest_available_update">A new system update is available:</string>
    <string name="update_information_installed_update">This version is currently being distributed:</string>
    <string name="update">Update</string>
    <string name="update_information_for">for</string>
    <string name="update_information_system_is_up_to_date">Your system is up to date.</string>
    <string name="update_information_no_update_data_available">No update information is available.</string>
    <string name="update_information_view_update_information">View update information</string>
    <string name="update_information_version">&#160;version:</string>
    <string name="update_information_last_checked_on">Last checked on: %1$s</string>
    <string name="update_information_file_name">File name: %1$s</string>
    <string name="update_description">Update description</string>
    <string name="update_description_not_available" translatable="false">This maintenance release provides bug fixes, performance enhancements, and critical security updates for your device.</string>
    <string name="update_information_close">Close</string>
    <string name="icon">Icon</string>
    <string name="server_status_warning">Some features may work incorrectly.</string>
    <string name="server_status_error">Some features may not work.</string>
    <string name="server_status_maintenance">There is currently planned maintenance on the server. Come back later!</string>
    <string name="server_status_taken_down">This application may no longer be used. You can try updating it to the latest version via Google Play. You have to exit it now.</string>
    <string name="server_status_unreachable">The server can\'t be reached. Try refreshing the page.</string>
    <string name="at">at</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="settings_cannot_launch_downloading">You can\'t open the Settings screen while an update is downloading…</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading…</string>
    <string name="verifying">Verifying…</string>
    <string name="verifying_error">File is damaged</string>
    <string name="download_permissions">Click Download again to download the update.</string>
    <string name="download_error">Download Error</string>
    <string name="download_error_corrupt">The downloaded update file is corrupt! Please try downloading it again.</string>
    <string name="download_error_network">A network error occurred while downloading the update file. Please make sure your Internet connection works and try downloading it again.</string>
    <string name="download_error_storage">There is insufficient storage space available on your device to save the downloaded update file. Please remove some files and try downloading it again.</string>
    <string name="download_error_sd_card">There is no SD card present in your device. Please insert an SD card into your device. After you have done so, try downloading the update again.</string>
    <string name="download_error_directory">It looks like there is no external storage available on your device. If you have an SD card, please make sure your device is not connected to a PC and make sure the SD card is configured to be used as external storage.</string>
    <string name="download_size_megabyte">%1$d MB</string>
    <string name="download_error_close">CLOSE</string>
    <string name="download_error_retry">RETRY</string>
    <string name="download_waiting_for_wifi">Waiting for a Wi-Fi connection…</string>
    <string name="download_will_retry_soon">Your download will re-start soon…</string>
    <string name="download_pending">Your download will start soon…</string>
    <string name="download_paused_unknown">Your download may be stuck. Try re-downloading the update…</string>
    <string name="download_waiting_for_network">Waiting for a network connection…</string>
    <string name="update_already_downloaded">The update was already downloaded. It is ready to get installed.</string>
    <string name="download_verifying">Your download will now be verified…</string>
    <string name="download_progress_text_unknown_time_remaining">%1$d%%, calculating time remaining…</string>
    <string name="download_progress_text_hours_remaining">%1$d%%, about %2$s hours remaining</string>
    <string name="download_progress_text_one_hour_remaining">%1$d%%, about 1 hour remaining</string>
    <string name="download_progress_text_minutes_remaining">%1$d%%, about %2$s minutes remaining</string>
    <string name="download_progress_text_one_minute_remaining">%1$d%%, about a minute remaining</string>
    <string name="download_progress_text_less_than_a_minute_remaining">%1$d%%, less than a minute remaining</string>
    <string name="download_progress_text_seconds_remaining">%1$d%%, a few seconds remaining</string>
    <string name="download_progress_text_verifying">100%, Verifying file…</string>
    <string name="download_unknown_update_name">Cyanogen OS Update</string>
    <string name="download_in_background">Your update will be downloaded in the background…</string>
    <string name="download_description">Cyanogen Update Tracker Downloader</string>
    <string name="cyanogen_os_version">Cyanogen OS Version: %1$s</string>
    <string name="download_cyanogen_os">Cyanogen OS Version</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="settings">Settings</string>
    <string name="settings_header">Choose your device and update method:</string>
    <string name="settings_device">Device</string>
    <string name="settings_update_method">Update method</string>
    <string name="settings_saved">Your settings are automatically saved.</string>
    <string name="settings_explanation_update_methods">Explanation of update methods</string>
    <string name="settings_explanation_incremental_full_update">An incremental update can only be installed if you were running the latest version before this update was released.\n\nA full update can be always be installed - regardless of your current software version running on your device.</string>
    <string name="settings_entered_incorrectly">Please wait while your settings are being saved.</string>
    <string name="settings_server_messages">Show these messages in the app:</string>
    <string name="settings_in_app">News and warning messages</string>
    <string name="settings_new_app_version">App update messages</string>
    <string name="settings_push_notifications">Send me these notifications:</string>
    <string name="settings_push_from_server">Important messages</string>
    <string name="settings_push_new_version">System update available</string>
    <string name="settings_push_new_device">New device supported</string>
    <string name="settings_system_up_to_date">Hide update information when:</string>
    <string name="settings_system_hide_when_up_to_date">My system is up to date</string>
    <string name="faq">FAQ page</string>
    <string name="faq_menuitem">FAQ</string>
    <string name="faq_no_network_title">No internet connection available.</string>
    <string name="faq_no_network">You\'ll need an internet connection to view the FAQ page.</string>
    <string name="reload">Reload</string>
    <string name="error_button_retry">Retry</string>
    <string name="error_maintenance">Server maintenance</string>
    <string name="error_maintenance_message">Please wait while the server undergoes maintenance. The server will be back online very soon.</string>
    <string name="error_app_not_valid">Outdated  app version</string>
    <string name="error_app_not_valid_message">This version of the app is too old and can no longer be used. Try updating the app from Google Play. This can be done by clicking on "Google Play" below. Within Google Play, click on "Update".</string>
    <string name="error_app_requires_network_connection">This app requires an active Internet connection</string>
    <string name="error_app_requires_network_connection_message">Failed to obtain update information from the server. Please make sure you have an active Internet connection. The app will now close.</string>
    <string name="error_exit_button_text">Exit</string>
    <string name="error_google_play_button_text" translatable="false">Google Play</string>
    <string name="error_push_failure">Failed to enable notifications. Please restart the app again after a few minutes.</string>
    <string name="error_no_internet_connection">No internet connection.</string>
    <string name="error_unable_to_rate_app">You can\'t rate the app, because either the Google Play Store or your web browser is missing.</string>
    <string name="delete_message_title">Delete update file?</string>
    <string name="delete_message_contents">You have already downloaded this update, but not yet installed it. Click on "Close" to close this message, then click on "Installation Guide" to view how to install this update. Click on "Delete" to permanently delete the file.</string>
    <string name="delete_message_delete_button">Delete</string>
    <string name="introduction_title">Welcome</string>
    <string name="introduction_welcome">Welcome to Cyanogen update tracker!</string>
    <string name="introduction_page_1">This app will allow you to download the latest Android™  updates for your Cyanogen® OS powered device early after release. \n\nSwipe to the left to continue.</string>
    <string name="introduction_choose_device">Choose your device:</string>
    <string name="introduction_page_2">The device to receive updates for is usually automatically selected. If not, select the right device above.\n\nWhen more devices running Cyanogen OS are released, they\'ll automatically be added and you will be notified!\n\nSwipe to the left to continue.</string>
    <string name="introduction_choose_update_method">Choose your update method:</string>
    <string name="introduction_page_3">Usually, the incremental update is the right choice here.\n\nAre you using a rooted device or do you skip updates regularly (e.g. you want to update 4.4.4 to 5.1)? Select Full update.\n\nSwipe to the left to continue.</string>
    <string name="introduction_ready_to_start">You are ready to go!</string>
    <string name="introduction_page_4">Enjoy using this app!\n\nYou can always change your settings by clicking the three dots in the top right corner (or press your Menu button) following a tap on \'change device and update method\'.</string>
    <string name="introduction_close_button">start app</string>
    <string name="install_guide">Install guide</string>
    <string name="install_guide_image_description">Tutorial image.</string>
    <string name="device_information_image_description">Device image</string>
    <string name="device_information_your_device">Your device: </string>
    <string name="device_information_system_on_a_chip">System on a Chip:</string>
    <string name="device_information_cpu_frequency">Processor Frequency:</string>
    <string name="device_information_amount_of_memory">Amount of memory:</string>
    <string name="device_information_os_version">Android version:</string>
    <string name="device_information_serial_number">Serial number:</string>
    <string name="update_information_advertising_id" translatable="false">** Add your AdMob ad block ID here **</string>
    <string name="device_information_advertising_id" translatable="false">** Add your AdMob ad block ID here **</string>
</resources>