<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/device_information_your_device"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textStyle="bold"
    android:layout_centerHorizontal="true"
    android:id="@+id/device_information_header"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/device_information_device_image"
        android:src="@drawable/phone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/device_information_header"
        android:contentDescription="@string/device_information_image_description" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tableLayout"
        android:layout_below="@+id/device_information_device_image"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_information_system_on_a_chip"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1.0"
                android:layout_marginTop="5dp"
                android:paddingStart="60dp"
                android:id="@+id/device_information_soc_field"
                android:paddingEnd="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_information_cpu_frequency"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/device_information_cpu_freq_field"
                android:layout_weight="1.0"
                android:layout_marginTop="5dp"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_information_amount_of_memory"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1.0"
                android:layout_marginTop="5dp"
                android:id="@+id/device_information_memory_field"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_information_os_version"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1.0"
                android:layout_marginTop="5dp"
                android:id="@+id/device_information_os_ver_field"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_information_serial_number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:layout_weight="1.0"
                android:id="@+id/device_information_serial_number_field"
                android:paddingStart="60dp"
                android:paddingEnd="0dp"/>
        </TableRow>

    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/device_information_banner_field"
        ads:adSize="BANNER"
        ads:adUnitId="@string/device_information_advertising_id"
        android:layout_alignParentBottom="true" />
</RelativeLayout>